app/assets/stylesheets/beyondmiles.css
.page-banner {
	background-image: url('http://beyondmiles.herokuapp.com/imgs/org-banner.png');
	height: 300px;
	/*padding-top: 120px;*/
	margin-bottom: 35px;
	background-size: 100% auto;
	background-repeat: no-repeat;
}

@media(max-width: 767px){
	.page-banner { 
		height: 150px;
		padding-top: 20px;
	}
}

p {
	font-family: 'Raleway', sans-serif;
	font-size: 16px;
}

p span {
	color: #54B2A4;
	font-weight: 800px;
}

.content {
	margin-bottom: 25px;
}

#btn-contact {
	background-color: #54B2A4;
	color: #FFF;
	font-size: 15px;
	padding: 10px 15px;
	border-radius: 0px;
}

#btn-contact:hover {
	color: #000;
}

